# K1-09

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  .scannerignore  Dockerfile.dev  README.md  agent_runner.sh  ap_profile.cpp  ap_profile.h  audio_producer.cpp  beat_gpio.cpp  beat_gpio.h  downbeat_lane.cpp  downbeat_lane.h  mel_filterbank.cpp  mel_filterbank.h  package-lock.json  package.json  partitions_4mb.csv  perceptual_map24.cpp  perceptual_map24.h  platformio.ini  vp_bars.h  vp_bars24.cpp  ws2812_dual_rmt_ng.cpp  ws2812_dual_rmt_ng.h
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  label-setup.sh  pull_request_template.md
Captains_Handbook/: Captain_Quality_CoPilot.md  Commit_Message_Scaffold.md  Community_Ops_Support_System.md  Diagnostic_First_Rubric.md  End_to_End_Validation_Lead.md  Fundraising_Partner_Outreach.md  GTM_Content_Engine.md  Hardware_BringUp_DFM_Coach.md  How_To_Use.md  Incident_Rollback_Commander.md  Manufacturing_Readiness_Supply_Chain.md  Operating_Heuristics.md  Product_Roadmap_Scope_Surgeon.md  README.md  Realtime_Firmware_Optimizer.md  Risk_Register_ADR_Steward.md  Rituals.md
analysis/: deps_graph.dot  deps_mermaid.md  deps_report.json  pipeline_map.json
ci/: size-baseline.json
docs/: COLOR_REFIT_GIT_WORKFLOW.md  README.md  Shim_Record.list  agent_ASSIGNMENTS.md  audio_frame_contract.md  branching_and_worktrees.md  lc_visual_pipeline_migration.md  metrics_and_logging.md  (+4 more)
tests/host/: CMakeLists.txt  CMakePresets.json  audio_processed_state_tests.cpp
tests/host/stubs/: Arduino.h  FixedPoints.h  FixedPointsCommon.h
(+674 files in other folders)
